kubernetes/stage3/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app1
---
apiVersion: v1
kind: Namespace
metadata:
  name: app2
