kubernetes/stage3/10-app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-nginx
  namespace: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1-nginx
  template:
    metadata:
      labels:
        app: app1-nginx
    spec:
      serviceAccountName: app1-sa
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: web-content
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
      volumes:
        - name: web-content
          configMap:
            name: app1-content
---
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
  namespace: app1
spec:
  selector:
    app: app1-nginx
  ports:
    - port: 80
      targetPort: 80
